--- a/assets/templates/component-stateless.template
+++ b/assets/templates/component-stateless.template
@@ -1,19 +1,7 @@
-import React from {quotes}react{quotes};
-import PropTypes from {quotes}prop-types{quotes};
-//import { Test } from './{componentName}.styles';
+interface {componentName}Props {}
 
-const {componentName} = (props) => (
-  <div className="{componentName}Wrapper">
-    Test content
+export default function {componentName}(props:{componentName}Props)(
+  <div>
+ 
   </div>
 );
-
-{componentName}.propTypes = {
-  // bla: PropTypes.string,
-};
-
-{componentName}.defaultProps = {
-  // bla: 'test',
-};
-
-export default {componentName};
